--- a/charts/sscs-tribunals-api/templates/postgresql.yaml
+++ b/charts/sscs-tribunals-api/templates/postgresql.yaml
@@ -1,4 +1,4 @@
-apiVersion: dbforpostgresql.azure.com/v1alpha1api20210601
+apiVersion: dbforpostgresql.azure.com/v1api20210601
 kind: FlexibleServersDatabase
 metadata:
   name: {{ .Release.Name }}
@@ -8,7 +8,7 @@ spec:
     name: sscs-flexibleserver-postgres
   charset: utf8
 ---
-apiVersion: dbforpostgresql.azure.com/v1alpha1api20210601
+apiVersion: flexibleservers.dbforpostgresql.azure.com/v1api20210601
 kind: FlexibleServer
 metadata:
  name: sscs-flexibleserver-postgres
