testing branch from master

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -134,7 +134,7 @@ ccd:
     apiGatewayWeb:
       enabled: true
     postgresql:
-      enabled: true
+      enabled: false
     s2s:
       enabled: false
     elastic:
