--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -211,12 +211,15 @@ ccd:
               alias: ROLE_ASSIGNMENT_DB_USERNAME
             - name: preview-ccd-db-password
               alias: ROLE_ASSIGNMENT_DB_PASSWORD
-
-      secrets:
-        - role-assignment-service-IDAM-CLIENT-SECRET
-        - role-assignment-service-IDAM-ADMIN-SECRET
-        - role-assignment-service-LD-SDK-KEY
-        - app-insights-connection-string
+        am:
+          secrets:
+            - am-role-assignment-service-s2s-secret
+            - app-insights-connection-string
+            - role-assignment-service-IDAM-CLIENT-SECRET
+            - role-assignment-service-IDAM-ADMIN-SECRET
+            - role-assignment-service-LD-SDK-KEY
+#      secrets:
+#        - name: app-insights-connection-string
 #        LD_SDK_KEY:
 #          secretRef: role-assignment-service-LD-SDK-KEY
 #          key: key
@@ -229,6 +232,7 @@ ccd:
 #          secretRef: role-assignment-service-IDAM-ADMIN-SECRET
 #          key: key
 #          disabled: true
+
   elasticsearch:
     nameOverride: ${SERVICE_NAME}-es
     clusterName: "es"
