--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -29,8 +29,8 @@ java:
     CASE_ACCESS_MANAGEMENT_FEATURE: true
     WORK_ALLOCATION_FEATURE: true
     SCHEDULE_LISTING_FEATURE: true
-    POST_HEARINGS_FEATURE: true
-    POST_HEARINGS_B_FEATURE: true
+    POST_HEARINGS_FEATURE: false
+    POST_HEARINGS_B_FEATURE: false
 
 idam-pr:
   releaseNameOverride: ${SERVICE_NAME}-idam-pr
@@ -488,7 +488,7 @@ ccd:
 
   #Use this image to import your CCD definition. To have an image available, create a git tag and push it.
   ccd-definition-importer:
-    image: hmctspublic.azurecr.io/sscs/ccd-definition-importer-benefit:S-623-2nonProd
+    image: hmctspublic.azurecr.io/sscs/ccd-definition-importer-benefit:S-623-2
     definitionFilename: sscs-ccd.xlsx
     redirectUri: http://${SERVICE_NAME}-ccd-admin-web/oauth2redirect
     environment:
