SSCS-10027 Create task "Review Confidentiality Request" (#3279)
* Rebase on master

* Update environment variables, am role assignments; Set scannedDocumentTypes property on case data

* Update fields scannedDocumentTypes and uploadedWelshDocumentTypes in actionFurtherEvidence and manageWelshDocuments events.

--- a/.env
+++ b/.env
@@ -32,6 +32,7 @@ APPINSIGHTS_INSTRUMENTATIONKEY=SomeRandomStringForLocalDocker
 # Work Allocation
 # export AZURE_SERVICE_BUS_CONNECTION_STRING="Endpoint=sb://ccd-servicebus-demo.servicebus.windows.net/;SharedAccessKeyName=SendAndRecieveCCDMessage;SharedAccessKey=REPLACEME"
 export AZURE_SERVICE_BUS_TOPIC_NAME=ccd-case-events
+export AZURE_SERVICE_BUS_MESSAGE_AUTHOR=sscs-local-1
 export AZURE_SERVICE_BUS_SUBSCRIPTION_NAME=ccd-case-events
 export AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME=ccd-case-events
 
@@ -60,6 +61,9 @@ export DOCUMENT_STORE_URL=http://localhost:5005
 export WA_SYSTEM_USERNAME=wa-system-user@fake.hmcts.net
 export WA_SYSTEM_PASSWORD=System01
 
+export CITIZEN_USERNAME=sscs-citizen@hmcts.net
+export CITIZEN_PASSWORD=password
+
 export SYSTEMUPDATE_USERNAME=system.update@hmcts.net
 export SYSTEMUPDATE_PASSWORD=password
 
@@ -71,6 +75,9 @@ export CASEWORKER_PASSWORD=password
 
 export CTSC_ADMINISTRATOR_USERNAME=ctsc-administrator@hmcts.net
 export CTSC_ADMINISTRATOR_PASSWORD=password
+
+export JUDGE_USERNAME=judge@example.com
+export JUDGE_PASSWORD=password
 
 export REGIONAL_CENTRE_ADMIN_USERNAME=regional-centre-admin@fake.hmcts.net
 export REGIONAL_CENTRE_ADMIN_PASSWORD=password
