add GAPS_SWITCHOVER_FEATURE SSCS-10587

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -36,6 +36,7 @@ java:
     SCHEDULE_LISTING_FEATURE: true
     POST_HEARINGS_FEATURE: true
     POST_HEARINGS_B_FEATURE: true
+    GAPS_SWITCHOVER_FEATURE: true
     DUMMY: true
 
 idam-pr:
