Fix to allow functional tests to run locally

--- a/.env
+++ b/.env
@@ -33,8 +33,8 @@ APPINSIGHTS_INSTRUMENTATIONKEY=SomeRandomStringForLocalDocker
 # export AZURE_SERVICE_BUS_CONNECTION_STRING="Endpoint=sb://ccd-servicebus-demo.servicebus.windows.net/;SharedAccessKeyName=SendAndRecieveCCDMessage;SharedAccessKey=REPLACEME"
 export AZURE_SERVICE_BUS_TOPIC_NAME=ccd-case-events
 export AZURE_SERVICE_BUS_MESSAGE_AUTHOR=sscs-local-1
-export AZURE_SERVICE_BUS_SUBSCRIPTION_NAME=ccd-case-events
-export AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME=ccd-case-events
+export AZURE_SERVICE_BUS_SUBSCRIPTION_NAME=ccd-case-events-ft
+export AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME=ccd-case-events-ft
 
 #Launch Darkly Key
 # export LAUNCH_DARKLY_SDK_KEY=REPLACEME
@@ -75,6 +75,9 @@ export CASEWORKER_PASSWORD=password
 
 export CTSC_ADMINISTRATOR_USERNAME=ctsc-administrator@hmcts.net
 export CTSC_ADMINISTRATOR_PASSWORD=password
+
+export REGIONAL_CENTRE_ADMIN_USERNAME=regional-centre-admin@fake.hmcts.net
+export REGIONAL_CENTRE_ADMIN_PASSWORD=password
 
 export JUDGE_USERNAME=judge@example.com
 export JUDGE_PASSWORD=password
