--- a/src/cftlib/resources/docker/cft-lib-work-allocation.yml
+++ b/src/cftlib/resources/docker/cft-lib-work-allocation.yml
@@ -82,7 +82,7 @@ services:
         ALLOWED_CASE_TYPES: asylum,wacasetype,sscs,civil,benefit
         WA_S2S_AUTHORIZED_SERVICES: ccd,ccd_data,ccd_gw,ccd_ps,iac,wa_task_management_api,xui_webapp,wa_task_monitor,camunda_bpm,wa_workflow_api,wa_case_event_handler
         LAUNCH_DARKLY_SDK_KEY: "${LAUNCH_DARKLY_SDK_KEY}"
-        WA_SYSTEM_USERNAME: "super-user@example.com"
+        WA_SYSTEM_USERNAME: "${WA_SYSTEM_USERNAME}"
         WA_SYSTEM_PASSWORD: "${WA_SYSTEM_PASSWORD}"
       ports:
         - 8087:8087
