--- a/build.gradle
+++ b/build.gradle
@@ -329,6 +329,9 @@ dependencies {
 
     implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '2.1.5'
     implementation group: 'com.github.hmcts', name: 'properties-volume-spring-boot-starter', version: '0.1.1'
+
+    implementation group: 'uk.gov.hmcts.reform', name: 'java-logging-httpcomponents', version: '5.1.6'
+
     implementation group: 'com.github.hmcts', name: 'java-logging', version: '6.0.1'
     implementation group: 'com.github.hmcts', name: 'doc-assembly-client', version: '1.07'
     implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
