--- a/build.gradle
+++ b/build.gradle
@@ -334,8 +334,8 @@ dependencies {
     //remove when secure doc store is live
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
-    
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: 'SSCS-11873'
+
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '74e649f'
     implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.4'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.42.0'
