--- a/build.gradle
+++ b/build.gradle
@@ -330,7 +330,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '2.1.5'
     implementation group: 'com.github.hmcts', name: 'properties-volume-spring-boot-starter', version: '0.1.1'
 
-    implementation group: 'uk.gov.hmcts.reform', name: 'java-logging-httpcomponents', version: '5.1.6'
+    compile group: 'uk.gov.hmcts.reform', name: 'java-logging-httpcomponents', version: versions.reformLogging
 
     implementation group: 'com.github.hmcts', name: 'java-logging', version: '6.0.1'
     implementation group: 'com.github.hmcts', name: 'doc-assembly-client', version: '1.07'
