--- a/build.gradle
+++ b/build.gradle
@@ -330,9 +330,9 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '2.1.5'
     implementation group: 'com.github.hmcts', name: 'properties-volume-spring-boot-starter', version: '0.1.1'
 
-    compile group: 'uk.gov.hmcts.reform', name: 'java-logging-httpcomponents', version: '2.0.2'
 
-    implementation group: 'com.github.hmcts', name: 'java-logging', version: '6.0.1'
+
+    // implementation group: 'com.github.hmcts', name: 'java-logging', version: '6.0.1'
     implementation group: 'com.github.hmcts', name: 'doc-assembly-client', version: '1.07'
     implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
     //remove when secure doc store is live
