--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -983,7 +983,7 @@ sscs-cron-trigger:
     kind: CronJob
     image: hmctspublic.azurecr.io/sscs/cron-trigger:pr-5-218a1cb-20230803170336
     releaseNameOverride: ${SERVICE_NAME}-sscs-cron-trigger
-    schedule: "0 10,12,15 * * *"
+    schedule: "0 10-17 * * *"
     environment:
       IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
       IDAM_OAUTH2_CLIENT_ID: ${IDAM_OAUTH2_CLIENT_ID}
