jvm max heap mem to 6gb

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -39,6 +39,7 @@ java:
     SCHEDULE_LISTING_FEATURE: true
     POST_HEARINGS_FEATURE: true
     POST_HEARINGS_B_FEATURE: true
+    JAVA_OPTS: -Xmx6G
 
 idam-pr:
   releaseNameOverride: ${SERVICE_NAME}-idam-pr
