Enable sscs-cron-trigger

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -981,7 +981,7 @@ ccd-message-publisher:
 sscs-cron-trigger:
   job:
     kind: CronJob
-    image: hmctspublic.azurecr.io/sscs/cron-trigger:pr-5-218a1cb-20230803170336
+    image: 'hmctspublic.azurecr.io/sscs/cron-trigger:pr-5-218a1cb-20230803170336'
     releaseNameOverride: ${SERVICE_NAME}-sscs-cron-trigger
     schedule: "0 10-17 * * *"
     environment:
