SSCS-11993 Deploy aac-manage-case-assignment service to preview (#3433)

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -144,8 +144,8 @@ xui-webapp:
           - system-user-name
           - system-user-password
 
-aac-manage-case-assignment:
-  enabled: false
+aac-manage-case-assignment:git 
+  enabled: true
   java:
     imagePullPolicy: Always
     releaseNameOverride: ${SERVICE_NAME}-aac-manage-case-assignment
