--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -134,7 +134,7 @@ xui-webapp:
           - system-user-password
 
 aac-manage-case-assignment:
-  enabled: true
+  enabled: false
   java:
     imagePullPolicy: Always
     releaseNameOverride: ${SERVICE_NAME}-aac-manage-case-assignment
@@ -557,7 +557,7 @@ ccd:
   #Use this image to import your CCD definition. To have an image available, create a git tag and push it.
   ccd-definition-importer:
 
-    image: hmctspublic.azurecr.io/sscs/ccd-definition-importer-benefit:S11100FnonProd
+    image: hmctspublic.azurecr.io/sscs/ccd-definition-importer-benefit:S11100GnonProd
     definitionFilename: sscs-ccd.xlsx
     redirectUri: http://${SERVICE_NAME}-ccd-admin-web/oauth2redirect
     environment:
@@ -576,7 +576,7 @@ ccd:
       CCD_DEF_MYA_REPRESENTATIVE_LINK: http://${SERVICE_NAME}-ccd-definition-store
       CCD_DEF_MYA_APPOINTEE_LINK: http://${SERVICE_NAME}-ccd-definition-store
       CCD_DEF_ENV: 'PROD'
-      CCD_DEF_VERSION: S11100FnonProd
+      CCD_DEF_VERSION: S11100GnonProd
     secrets: []
     userRoles:
       - citizen
