disable test postgresql for am-role-assignment-ser

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -199,6 +199,8 @@ ccd:
           secretRef: "{{ .Values.global.postgresSecret }}"
           key: PASSWORD
           disabled: false
+      postgresql:
+        enabled: false 
   elasticsearch:
     nameOverride: ${SERVICE_NAME}-es
     clusterName: "es"
