Update logging level to info in prod so that PII information is not logged in app insights

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -140,8 +140,8 @@ case_document_am.url=${CASE_DOCUMENT_AM_URL:http://localhost:4455}
 dwp.response.due.days=${DWP_RESPONSE_DUE_DAYS:28}
 dwp.response.due.days-child-support=${DWP_RESPONSE_DUE_DAYS_CHILD_SUPPORT:42}
 
-logging.level.uk.gov.hmcts.fortifyclient=DEBUG
-logging.level.uk.gov.hmcts=DEBUG
+logging.level.uk.gov.hmcts.fortifyclient=INFO
+logging.level.uk.gov.hmcts=INFO
 
 location_ref.enabled=true
 location_ref.api.url=${RD_LOCATION_REF_API_URL:http://localhost:5555}
