--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -769,12 +769,12 @@ postgresql:
   flexibleserver: sscs-flexibleserver-postgres-preview
   setup:
     databases:
-    - name: data-store
-    - name: definition-store
-    - name: user-profile
-    - name: draftstore
-    - name: evidence
-    - name: annotation
-    - name: role-assignment
-    - name: hmc-cft-hearing-service
-    - name: sscsjobscheduler
+    # - name: data-store
+    # - name: definition-store
+    # - name: user-profile
+    # - name: draftstore
+    # - name: evidence
+    # - name: annotation
+    # - name: role-assignment
+    # - name: hmc-cft-hearing-service
+    # - name: sscsjobscheduler
