--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -191,11 +191,9 @@ ccd:
           secrets:
             - name: preview-ccd-db-username
               alias: ROLE_ASSIGNMENT_DB_USERNAME
+            - name: preview-ccd-db-password-2
+              alias: ROLE_ASSIGNMENT_DB_PASSWORD
       secrets:
-        ROLE_ASSIGNMENT_DB_PASSWORD:
-          secretRef: sscs-postgres
-          key: PASSWORD
-          disabled: false
         LD_SDK_KEY:
           secretRef: role-assignment-service-LD-SDK-KEY
           key: key
