--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -175,6 +175,7 @@ ccd:
       environment:
         ROLE_ASSIGNMENT_DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
         ROLE_ASSIGNMENT_DB_NAME: "role-assignment"
+        ROLE_ASSIGNMENT_DB_USERNAME: "hmcts"
         ROLE_ASSIGNMENT_DB_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
         AM_ROLE_ASSIGNMENT_SERVICE_SECRET: AAAAAAAAAAAAAAAA
         IDAM_USER_URL: "https://idam-web-public.aat.platform.hmcts.net"
@@ -188,12 +189,12 @@ ccd:
         ENABLE_DB_MIGRATE: true
       keyVaults:
         sscs:
-          secrets:
-            - name: preview-ccd-db-username
-              alias: ROLE_ASSIGNMENT_DB_USERNAME
-            - name: preview-ccd-db-password-2
-              alias: ROLE_ASSIGNMENT_DB_PASSWORD
+          disabled: true
       secrets:
+        ROLE_ASSIGNMENT_DB_PASSWORD:
+          secretRef: sscs-postgres
+          key: PASSWORD
+          disabled: false
         LD_SDK_KEY:
           secretRef: role-assignment-service-LD-SDK-KEY
           key: key
