updated chart and restored secrets

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -149,7 +149,7 @@ ccd:
     elastic:
       enabled: true
     ras:
-      enabled: false
+      enabled: true
 
 
   global:
@@ -189,6 +189,13 @@ ccd:
         BYPASS_ORG_DROOL_RULE: true
         LAUNCH_DARKLY_ENV: pr
         ENABLE_DB_MIGRATE: true
+      keyVaults:
+        sscs:
+          secrets:
+            - name: preview-ccd-db-username
+              alias: ROLE_ASSIGNMENT_DB_USERNAME
+            - name: preview-ccd-db-password-2
+              alias: ROLE_ASSIGNMENT_DB_PASSWORD
       secrets:
         LD_SDK_KEY:
           secretRef: role-assignment-service-LD-SDK-KEY
@@ -220,7 +227,7 @@ ccd:
       - name: DATA_STORE_URL
         value: "jdbc:postgresql://${SERVICE_NAME}-postgresql:5432/data-store?sslmode=require&stringtype=unspecified"
       - name: DATA_STORE_USER
-        value: hmctslogstash
+        value: hmcts
       - name: ES_HOSTS
         value: "${SERVICE_NAME}-es-master"
     extraInitContainers: |
@@ -253,7 +260,7 @@ ccd:
         input  {
           jdbc {
             jdbc_connection_string => "jdbc:postgresql://${SERVICE_NAME}-postgresql:5432/data-store?sslmode=require&stringtype=unspecified"
-            jdbc_user => "hmctslogstash"
+            jdbc_user => "hmcts"
             jdbc_password => "hmcts"
             jdbc_validate_connection => true
             jdbc_validation_timeout => "1"
