updated secret ref

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -232,7 +232,7 @@ ccd:
         value: "${SERVICE_NAME}-es-master"
     envFrom:
       - secretRef:
-          name: "{{ .Values.global.postgresSecret }}"
+          name: sscs-postgres
     extraInitContainers: |
       - name: download-postgres-jdbc
         image: hmctspublic.azurecr.io/curl:7.70.0
