--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -227,7 +227,7 @@ ccd:
       - name: DATA_STORE_URL
         value: "jdbc:postgresql://sscs-flexibleserver-postgres-preview.postgres.database.azure.com:5432/data-store?sslmode=require&stringtype=unspecified"
       - name: DATA_STORE_USER
-        value: hmctsu1
+        value: hmcts
       - name: ES_HOSTS
         value: "${SERVICE_NAME}-es-master"
     envFrom:
@@ -263,7 +263,7 @@ ccd:
         input  {
           jdbc {
             jdbc_connection_string => "jdbc:postgresql://sscs-flexibleserver-postgres-preview.postgres.database.azure.com:5432/data-store?sslmode=require&stringtype=unspecified"
-            jdbc_user => "hmctsu2"
+            jdbc_user => "hmcts"
             jdbc_password => "${PASSWORD}"
             jdbc_validate_connection => true
             jdbc_validation_timeout => "1"
