--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -263,8 +263,8 @@ ccd:
         input  {
           jdbc {
             jdbc_connection_string => "jdbc:postgresql://sscs-flexibleserver-postgres-preview.postgres.database.azure.com:5432/data-store?sslmode=require&stringtype=unspecified"
-            jdbc_user => "hmcts@sscs-flexibleserver-postgres-preview"
-            jdbc_password => "${PASSWORD}"
+            jdbc_user => "hmcts"
+            jdbc_password => "JYD837hjhkaRED"
             jdbc_validate_connection => true
             jdbc_validation_timeout => "1"
             jdbc_driver_library => "/usr/share/logstash/ccd/postgresql.jar"
