trying exactly same as example

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -230,9 +230,14 @@ ccd:
         value: hmcts
       - name: ES_HOSTS
         value: "${SERVICE_NAME}-es-master"
-    envFrom:
-      - secretRef:
-          name: sscs-postgres
+      - name: 'MY_PASSWORD'
+        valueFrom:
+          secretKeyRef:
+            name: sscs-postgres
+            key: PASSWORD
+    # envFrom:
+    #   - secretRef:
+    #       name: sscs-postgres
     extraInitContainers: |
       - name: download-postgres-jdbc
         image: hmctspublic.azurecr.io/curl:7.70.0
@@ -264,7 +269,7 @@ ccd:
           jdbc {
             jdbc_connection_string => "jdbc:postgresql://sscs-flexibleserver-postgres-preview.postgres.database.azure.com:5432/data-store?sslmode=require&stringtype=unspecified"
             jdbc_user => "hmcts"
-            jdbc_password => '${PASSWORD}'
+            jdbc_password => '${MY_PASSWORD}'
             jdbc_validate_connection => true
             jdbc_validation_timeout => "1"
             jdbc_driver_library => "/usr/share/logstash/ccd/postgresql.jar"
